--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "counter-app",
+  "name": "HalfNHalf",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
+    "bourbon-neat": "^3.0.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
