--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-places-autocomplete": "^7.2.0",
+    "react-popup": "^0.9.3",
     "react-scripts": "2.1.1",
     "react-table": "^6.8.6"
   },
