--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "bourbon-neat": "^3.0.0",
@@ -10,7 +11,6 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-places-autocomplete": "^7.2.0",
-    "react-popup": "^0.9.3",
     "react-scripts": "2.1.1",
     "react-table": "^6.8.6"
   },
