--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.7.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "bourbon-neat": "^3.0.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
