--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.26",
     "axios": "^0.18.0",
+    "backendless": "^5.2.0",
     "bootstrap": "^4.1.1",
     "bourbon-neat": "^3.0.0",
+    "date-fns": "^1.30.1",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
+    "google-maps-react": "^2.0.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-next-pickers": "0.0.16",
+    "material-ui-pickers": "^2.0.4",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-number-format": "^4.0.5",
+    "react-numeric-input": "^2.2.3",
     "react-places-autocomplete": "^7.2.0",
     "react-scripts": "2.1.1",
     "react-table": "^6.8.6"
