--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-number-format": "^4.0.5",
     "react-numeric-input": "^2.2.3",
     "react-places-autocomplete": "^7.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-table": "^6.8.6"
   },
