--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.1",
     "bourbon-neat": "^3.0.0",
     "date-fns": "^1.30.1",
+    "draft-js": "^0.10.5",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "google-maps-react": "^2.0.2",
