--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.26",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "backendless": "^5.2.0",
     "bootstrap": "^4.1.1",
@@ -21,6 +22,7 @@
     "material-ui-pickers": "^2.0.4",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.6.3",
     "react-number-format": "^4.0.5",
     "react-numeric-input": "^2.2.3",
