--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui-next-pickers": "0.0.16",
     "material-ui-pickers": "^2.0.4",
     "node-sass": "^4.11.0",
+    "qs": "^6.6.0",
     "react": "^16.6.3",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.6.3",
@@ -29,7 +30,7 @@
     "react-places-autocomplete": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.8",
     "react-stripe-elements": "^2.0.1",
     "react-table": "^6.8.6"
   },
