--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node-sass": "^4.11.0",
     "qs": "^6.6.0",
     "react": "^16.6.3",
-    "react-autosuggest": "^9.4.3",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.6.3",
     "react-number-format": "^4.0.5",
     "react-numeric-input": "^2.2.3",
