--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "qs": "^6.6.0",
     "react": "^16.6.3",
     "react-autocomplete": "^1.8.1",
+    "react-cookie": "^3.1.2",
+    "react-cookie-consent": "^2.3.0",
     "react-dom": "^16.6.3",
     "react-number-format": "^4.0.5",
     "react-numeric-input": "^2.2.3",
